kubernetes/service.yml
---
kind: Service
apiVersion: v1
metadata:
  name: zagent
spec:
  type: NodePort
  selector:
    app: zagent
  ports:
  - name: zagent
    protocol: TCP
    port: 3000
